some bug fixes and add z-index in menubar

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,6 +1,3 @@
-.main-container {
-}
-
 .menu-bar {
    background: linear-gradient(
       90deg,
@@ -15,6 +12,7 @@
    justify-content: space-between;
    width: 100%;
    position: relative;
+   z-index: 5;
 }
 
 .menu-bar h1 {
