--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -69,6 +69,10 @@
       .options-container{
          grid-template-columns: repeat(1, 1fr);
          justify-content: start;
+         
+      }
+      .correct-answer{
+            min-width: auto;
       }
    }
 
